GNOME Bugzilla – Bug 673022
e-web-app-utils: update and fix gtk-doc comments
Last modified: 2012-03-31 01:45:22 UTC
Add missing comments for application list API and fix typos.
Created attachment 210810 [details] [review] e-web-app-utils: update and fix gtk-doc comments
Review of attachment 210810 [details] [review]: OK.
Attachment 210810 [details] pushed as fe4925c - e-web-app-utils: update and fix gtk-doc comments