e-web-app-utils: update and fix gtk-doc comments

https://bugzilla.gnome.org/show_bug.cgi?id=673022